--- a/ecommerce/src/components/nav-bar/nav-bar.component.scss
+++ b/ecommerce/src/components/nav-bar/nav-bar.component.scss
@@ -5,7 +5,7 @@
 .navBar {
     width: 100%;
     background-color: $primary-color;
-    position: sticky;
+    position: relative;
     padding: 1rem;
     z-index: 1000;
 
